--- a/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-dark.scss
@@ -343,7 +343,7 @@ em {
 }
 
 .secradio {
-  color: #ec3554;
+  color: #dd3535;
 }
 
 .medradio {
@@ -870,8 +870,3 @@ em {
 .ml-3 {
   margin-left: 3em;
 }
-
-/* SKYRAT DARK MODE CLASSES */
-.mentor         {color: #8a2be2;}
-.looc         {color: #d8b555;}
-.rlooc          {color: #b09448;}
