--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -364,7 +364,7 @@ em {
 }
 
 .secradio {
-  color: #ec3554;
+  color: #a30000;
 }
 
 .medradio {
@@ -912,8 +912,3 @@ h1.alert, h2.alert {
 .ml-3 {
   margin-left: 3em;
 }
-
-/* SKYRAT LIGHT MODE CLASSES */
-.mentor         {color: #8a2be2;}
-.looc         {color: #6699CC;  font-weight: bold;}
-.rlooc          {color: #507294;  font-weight: bold;}
